API/api-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-deployment
  labels:
    app: yubo-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: yubo-api
  template:
    metadata:
      labels:
        app: yubo-api
    spec:
      containers:
        - name: yubo-api
          image: apatora/devops-test-api:latest
          readinessProbe:
            httpGet:
              path: /health
              port: 3000
              httpHeaders:
            initialDelaySeconds: 3
            periodSeconds: 3
          resources:
            limits:
              memory: "2Gi"
              cpu: "1.0"
