API/api-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: api-service
  labels:
    name: api
spec:
  ports:
    - port: 3000
      targetPort: 3000
  clusterIP: None
  selector:
    app: yubo-api
